# PU-Net

./: README.md
code/: README.md  data_provider.py  main.py  model_generator2_2new6.py  model_utils.py
code/tf_ops/: compile.sh
code/tf_ops/CD/: makefile  makefile_fortf1.4+  tf_cd_compile.sh  tf_cd_compile_abi.sh  tf_nndistance.py  tf_nndistance_g.cu
code/tf_ops/emd/: tf_auctionmatch.cpp  tf_auctionmatch.py  tf_auctionmatch_compile.sh  tf_auctionmatch_compile_abi.sh  tf_auctionmatch_g.cu
code/tf_ops/grouping/: query_ball_point.cpp  query_ball_point.cu  query_ball_point_block.cu  query_ball_point_grid.cu  tf_grouping.cpp  tf_grouping.py  tf_grouping_compile.sh  tf_grouping_compile_abi.sh  tf_grouping_g.cu
code/tf_ops/interpolation/: tf_interpolate_compile.sh  tf_interpolate_compile_abi.sh
code/tf_ops/sampling/: tf_sampling_compile.sh  tf_sampling_compile_abi.sh
code/utils/: modelnet_data_prep.py  off2obj.py  pc_util.py  pointnet_util.py  show3d.py  tf_util.py  tf_util2.py  write_result2html.py
data/test_data/our_collected_data/MC_5k/: Icosahedron.xyz  Octahedron.xyz  camel.xyz  casting.xyz  chair.xyz  coverrear_Lp.xyz  cow.xyz  duck.xyz  eight.xyz  elephant.xyz  elk.xyz  fandisk.xyz  genus3.xyz  horse.xyz  kitten.xyz  moai.xyz  pig.xyz  quadric.xyz  sculpt.xyz  star.xyz
evaluation_code/: CMakeLists.txt  evaluation.cpp  nicolo.off  nicolo.xyz
h5_data/: README.md
model/: README.md
